@@ -10,80 +10,197 @@ import java.math.BigDecimal;
 import java.time.LocalDateTime;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 
 class ReconciliationMatcherTest {
 
-    private final ReconciliationMatcher matcher = new ReconciliationMatcher(60);
+    private final ReconciliationMatcher matcher =
+            new ReconciliationMatcher(60, 2);
 
     @Test
-    void shouldMatchPerfectly() {
+    void shouldReconcileExactMatch() {
         LocalDateTime now = LocalDateTime.now();
-        Transaction t1 = new Transaction("REF1", new BigDecimal("100.00"), now);
-        BankStatementLine b1 = new BankStatementLine("REF1", new BigDecimal("100.00"), now);
 
-        List<ReconciliationResult> results = matcher.reconcile(List.of(t1), List.of(b1));
+        Transaction t1 =
+                new Transaction("REF1", new BigDecimal("100.00"), now);
+        BankStatementLine b1 =
+                new BankStatementLine("REF1", new BigDecimal("100.00"), now);
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of(b1));
 
         assertEquals(1, results.size());
-        assertEquals(ReconciliationStatus.MATCHED, results.get(0).getStatus());
+        assertEquals(
+                ReconciliationStatus.RECONCILED_EXACT,
+                results.getFirst().getStatus()
+        );
     }
 
     @Test
-    void shouldDetectAmountDiscrepancy() {
+    void shouldDetectAmountMismatch() {
         LocalDateTime now = LocalDateTime.now();
-        Transaction t1 = new Transaction("REF1", new BigDecimal("100.00"), now);
-        BankStatementLine b1 = new BankStatementLine("REF1", new BigDecimal("99.00"), now);
 
-        List<ReconciliationResult> results = matcher.reconcile(List.of(t1), List.of(b1));
+        Transaction t1 =
+                new Transaction("REF1", new BigDecimal("100.00"), now);
+        BankStatementLine b1 =
+                new BankStatementLine("REF1", new BigDecimal("99.00"), now);
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of(b1));
 
         assertEquals(1, results.size());
-        assertEquals(ReconciliationStatus.DISCREPANCY_AMOUNT, results.get(0).getStatus());
+        assertEquals(
+                ReconciliationStatus.AMOUNT_MISMATCH,
+                results.getFirst().getStatus()
+        );
     }
 
     @Test
     void shouldDetectMissingInBank() {
         LocalDateTime now = LocalDateTime.now();
-        Transaction t1 = new Transaction("REF1", new BigDecimal("100.00"), now);
 
-        List<ReconciliationResult> results = matcher.reconcile(List.of(t1), List.of());
+        Transaction t1 =
+                new Transaction("REF1", new BigDecimal("100.00"), now);
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of());
 
         assertEquals(1, results.size());
-        assertEquals(ReconciliationStatus.MISSING_IN_BANK, results.get(0).getStatus());
+        assertEquals(
+                ReconciliationStatus.MISSING_IN_BANK,
+                results.getFirst().getStatus()
+        );
     }
 
     @Test
     void shouldDetectMissingInInternal() {
         LocalDateTime now = LocalDateTime.now();
-        BankStatementLine b1 = new BankStatementLine("REF1", new BigDecimal("100.00"), now);
 
-        List<ReconciliationResult> results = matcher.reconcile(List.of(), List.of(b1));
+        BankStatementLine b1 =
+                new BankStatementLine("REF1", new BigDecimal("100.00"), now);
 
-        assertEquals(1, results.size());
-        assertEquals(ReconciliationStatus.MISSING_IN_INTERNAL, results.get(0).getStatus());
-    }
-    
-    @Test
-    void shouldMatchWithDateTolerance() {
-        LocalDateTime now = LocalDateTime.now();
-        Transaction t1 = new Transaction("REF1", new BigDecimal("100.00"), now);
-        BankStatementLine b1 = new BankStatementLine("REF1", new BigDecimal("100.00"), now.plusSeconds(30));
-
-        List<ReconciliationResult> results = matcher.reconcile(List.of(t1), List.of(b1));
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(), List.of(b1));
 
         assertEquals(1, results.size());
-        assertEquals(ReconciliationStatus.MATCHED, results.get(0).getStatus());
+        assertEquals(
+                ReconciliationStatus.MISSING_IN_INTERNAL,
+                results.getFirst().getStatus()
+        );
     }
 
     @Test
-    void shouldMatchEvenIfDateOutsideToleranceIfReferenceMatches() {
-        // As per current implementation decision
+    void shouldReconcileWithSecondsTolerance() {
         LocalDateTime now = LocalDateTime.now();
-        Transaction t1 = new Transaction("REF1", new BigDecimal("100.00"), now);
-        BankStatementLine b1 = new BankStatementLine("REF1", new BigDecimal("100.00"), now.plusSeconds(120)); // > 60s
 
-        List<ReconciliationResult> results = matcher.reconcile(List.of(t1), List.of(b1));
+        Transaction t1 =
+                new Transaction("REF1", new BigDecimal("100.00"), now);
+        BankStatementLine b1 =
+                new BankStatementLine(
+                        "REF1",
+                        new BigDecimal("100.00"),
+                        now.plusSeconds(30)
+                );
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of(b1));
 
         assertEquals(1, results.size());
-        assertEquals(ReconciliationStatus.MATCHED, results.get(0).getStatus());
+        assertEquals(
+                ReconciliationStatus.RECONCILED_EXACT,
+                results.getFirst().getStatus()
+        );
     }
+
+    @Test
+    void shouldReconcileWithDayTolerance() {
+        LocalDateTime now = LocalDateTime.now();
+
+        Transaction t1 =
+                new Transaction("REF1", new BigDecimal("100.00"), now);
+        BankStatementLine b1 =
+                new BankStatementLine(
+                        "REF1",
+                        new BigDecimal("100.00"),
+                        now.plusDays(1)
+                );
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of(b1));
+
+        assertEquals(1, results.size());
+        assertEquals(
+                ReconciliationStatus.RECONCILED_TIME_TOLERANCE,
+                results.getFirst().getStatus()
+        );
+    }
+
+    @Test
+    void shouldDetectAmbiguousReferenceMatch() {
+        LocalDateTime now = LocalDateTime.now();
+
+        Transaction t1 = new Transaction("REF1", new BigDecimal("100"), now);
+        Transaction t2 = new Transaction("REF1", new BigDecimal("100"), now);
+
+        BankStatementLine b1 = new BankStatementLine("REF1", new BigDecimal("100"), now);
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1, t2), List.of(b1));
+
+        assertEquals(1, results.size());
+        assertEquals(ReconciliationStatus.AMBIGUOUS_MATCH, results.getFirst().getStatus());
+    }
+
+    @Test
+    void shouldDetectAmbiguousAmountMatch() {
+        LocalDateTime now = LocalDateTime.now();
+
+        Transaction t1 = new Transaction("A", new BigDecimal("100"), now);
+        Transaction t2 = new Transaction("B", new BigDecimal("100"), now);
+
+        BankStatementLine b1 = new BankStatementLine("X", new BigDecimal("100"), now);
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1, t2), List.of(b1));
+
+        assertEquals(1, results.size());
+        assertEquals(ReconciliationStatus.AMBIGUOUS_MATCH, results.getFirst().getStatus());
+    }
+
+    @Test
+    void shouldDetectDateMismatch() {
+        LocalDateTime now = LocalDateTime.now();
+
+        Transaction t1 = new Transaction("REF1", new BigDecimal("100"), now);
+        BankStatementLine b1 = new BankStatementLine(
+                "REF1",
+                new BigDecimal("100"),
+                now.plusDays(10)
+        );
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of(b1));
+
+        assertEquals(1, results.size());
+        assertEquals(ReconciliationStatus.DATE_MISMATCH, results.getFirst().getStatus());
+    }
+
+    @Test
+    void shouldProducePotentialMatch() {
+        LocalDateTime now = LocalDateTime.now();
+
+        Transaction t1 = new Transaction("INT1", new BigDecimal("100"), now);
+        BankStatementLine b1 = new BankStatementLine(
+                "BANK1",
+                new BigDecimal("100"),
+                now.plusSeconds(30)
+        );
+
+        List<ReconciliationResult> results =
+                matcher.reconcile(List.of(t1), List.of(b1));
+
+        assertEquals(1, results.size());
+        assertEquals(ReconciliationStatus.POTENTIAL_MATCH, results.getFirst().getStatus());
+    }
+
 }
